replace deprecated constructor